Closed
Bug 1669092
Opened 5 years ago
Closed 5 years ago
nsWindow.cpp:1604:8: error: variable ‘hasAnchorRect’ set but not used [-Werror=unused-but-set-variable]
Categories
(Core :: Widget: Gtk, defect)
Core
Widget: Gtk
Tracking
()
RESOLVED
FIXED
83 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox81 | --- | unaffected |
| firefox82 | --- | unaffected |
| firefox83 | --- | fixed |
People
(Reporter: Sylvestre, Assigned: Sylvestre)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
/root/firefox-gcc-last/widget/gtk/nsWindow.cpp: In member function ‘void nsWindow::NativeMoveResizeWaylandPopup(GdkPoint*, GdkRectangle*)’:
/root/firefox-gcc-last/widget/gtk/nsWindow.cpp:1604:8: error: variable ‘hasAnchorRect’ set but not used [-Werror=unused-but-set-variable]
1604 | bool hasAnchorRect = true;
| ^~~~~~~~~~~~~
| Assignee | ||
Comment 1•5 years ago
|
||
Pushed by sledru@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/5a4c937d641f
declare 'hasAnchorRect' only for wayland r=stransky
Comment 3•5 years ago
|
||
Set release status flags based on info from the regressing bug 1661192
status-firefox81:
--- → unaffected
status-firefox82:
--- → unaffected
status-firefox83:
--- → affected
status-firefox-esr78:
--- → unaffected
Comment 4•5 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch
Updated•4 years ago
|
Keywords: regression
Updated•4 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•