Bug 1669092 - declare 'hasAnchorRect' only for wayland r=stransky

Differential Revision: https://phabricator.services.mozilla.com/D92347